--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,10 @@
 <h2>My Heroes</h2>
-<ul>
-    <li>
+<ul class="heroes">
+    <li *ngFor="let hero of heroes">
         <button type="button">
             <span class="badge">{{hero.id}}</span>
-            <span class="badge">{{hero.name}}</span>
+            <span class="name">{{hero.name | uppercase}}</span>
         </button>
-    </li *ngFor="let hero of heroes">
+    </li>
 </ul>
 
